# TESTAPI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: import-places.yml
data/: navisli_places.csv
src/navisli_places_agent/: cli.py  duplicate.py  importer.py  models.py  normalise.py  repository.py
supabase/: agent_tables.sql  places_read_layer.sql  review_workflow.sql  secure_api_access.sql
supabase/functions/search-places/: index.ts
tests/: test_duplicate.py  test_models.py
