[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navisli-places-agent"
version = "0.1.0"
description = "Supervised CSV to Supabase interconnector for NaviSlí Places"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2,<3",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "supabase>=2.6,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
]

[project.scripts]
navisli-places = "navisli_places_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/navisli_places_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
